--- a/stm/pinout.ioc
+++ b/stm/pinout.ioc
@@ -15,33 +15,38 @@ Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PB10
-Mcu.Pin11=PB11
-Mcu.Pin12=PA8
-Mcu.Pin13=PA13 (JTMS-SWDIO)
-Mcu.Pin14=PA14 (JTCK-SWCLK)
-Mcu.Pin15=PC10
-Mcu.Pin16=PC11
-Mcu.Pin17=PC12
-Mcu.Pin18=PD2
-Mcu.Pin19=PB3 (JTDO-TRACESWO)
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB10
+Mcu.Pin13=PB11
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA11
+Mcu.Pin17=PA12
+Mcu.Pin18=PA13 (JTMS-SWDIO)
+Mcu.Pin19=PA14 (JTCK-SWCLK)
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PB4 (NJTRST)
-Mcu.Pin21=PB5
-Mcu.Pin22=PB6
-Mcu.Pin23=PB7
-Mcu.Pin24=PB8
-Mcu.Pin25=PB9
-Mcu.Pin26=VP_IWDG_VS_IWDG
-Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin20=PC10
+Mcu.Pin21=PC11
+Mcu.Pin22=PC12
+Mcu.Pin23=PD2
+Mcu.Pin24=PB3 (JTDO-TRACESWO)
+Mcu.Pin25=PB4 (NJTRST)
+Mcu.Pin26=PB5
+Mcu.Pin27=PB6
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8
 Mcu.Pin3=PH0-OSC_IN (PH0)
+Mcu.Pin30=PB9
+Mcu.Pin31=VP_IWDG_VS_IWDG
+Mcu.Pin32=VP_SYS_VS_Systick
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA0
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA5
-Mcu.PinsNb=28
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -59,6 +64,14 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true
 PA0.Signal=S_TIM2_CH1
 PA1.Signal=S_TIM2_CH2
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=GND1
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=GND2
+PA12.Locked=true
+PA12.Signal=GPIO_Output
 PA13\ (JTMS-SWDIO).GPIOParameters=GPIO_Label
 PA13\ (JTMS-SWDIO).GPIO_Label=TMS
 PA13\ (JTMS-SWDIO).Locked=true
@@ -92,8 +105,22 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA8.Mode=Clock-out
-PA8.Signal=RCC_MCO
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=BTN_KEY1
+PA6.Locked=true
+PA6.Signal=GPXTI6
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=BTN_KEY2
+PA7.Locked=true
+PA7.Signal=GPXTI7
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=BTN_KEY3
+PA8.Locked=true
+PA8.Signal=GPXTI8
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=BTN_KEY4
+PA9.Locked=true
+PA9.Signal=GPXTI9
 PB10.Signal=S_TIM2_CH3
 PB11.Signal=S_TIM2_CH4
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
@@ -212,6 +239,14 @@ RCC.VCOSAI1OutputFreq_Value=64000000
 RCC.VCOSAI2OutputFreq_Value=64000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SH.S_TIM2_CH1.0=TIM2_CH1,Output Compare1 CH1
 SH.S_TIM2_CH1.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,Output Compare2 CH2
