--- a/stm/pinout.ioc
+++ b/stm/pinout.ioc
@@ -129,13 +129,13 @@ PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Mode=Trace_Asynchronous_SW
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
 PB4\ (NJTRST).GPIOParameters=GPIO_Label
-PB4\ (NJTRST).GPIO_Label=HX_CLK
+PB4\ (NJTRST).GPIO_Label=HX_RX
 PB4\ (NJTRST).Locked=true
-PB4\ (NJTRST).Signal=GPIO_Output
+PB4\ (NJTRST).Signal=GPIO_Input
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=HX_RX
+PB5.GPIO_Label=HX_CLK
 PB5.Locked=true
-PB5.Signal=GPIO_Input
+PB5.Signal=GPIO_Output
 PB6.Signal=S_TIM4_CH1
 PB7.Signal=S_TIM4_CH2
 PB8.Signal=S_TIM4_CH3
