--- a/stm/pinout.ioc
+++ b/stm/pinout.ioc
@@ -8,45 +8,37 @@ Mcu.IP2=RCC
 Mcu.IP3=SPI3
 Mcu.IP4=SYS
 Mcu.IP5=TIM2
-Mcu.IP6=TIM4
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PB10
-Mcu.Pin13=PB11
-Mcu.Pin14=PA8
-Mcu.Pin15=PA9
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=PA13 (JTMS-SWDIO)
-Mcu.Pin19=PA14 (JTCK-SWCLK)
+Mcu.Pin10=PA7
+Mcu.Pin11=PA8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA13 (JTMS-SWDIO)
+Mcu.Pin16=PA14 (JTCK-SWCLK)
+Mcu.Pin17=PC10
+Mcu.Pin18=PC11
+Mcu.Pin19=PC12
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PC10
-Mcu.Pin21=PC11
-Mcu.Pin22=PC12
-Mcu.Pin23=PD2
-Mcu.Pin24=PB3 (JTDO-TRACESWO)
-Mcu.Pin25=PB4 (NJTRST)
-Mcu.Pin26=PB5
-Mcu.Pin27=PB6
-Mcu.Pin28=PB7
-Mcu.Pin29=PB8
+Mcu.Pin20=PD2
+Mcu.Pin21=PB3 (JTDO-TRACESWO)
+Mcu.Pin22=PB4 (NJTRST)
+Mcu.Pin23=PB5
+Mcu.Pin24=VP_IWDG_VS_IWDG
+Mcu.Pin25=VP_SYS_VS_Systick
 Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin30=PB9
-Mcu.Pin31=VP_IWDG_VS_IWDG
-Mcu.Pin32=VP_SYS_VS_Systick
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA0
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA5
-Mcu.PinsNb=33
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -62,8 +54,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=MTR_PWM
+PA0.Locked=true
 PA0.Signal=S_TIM2_CH1
-PA1.Signal=S_TIM2_CH2
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=GND1
 PA11.Locked=true
@@ -121,8 +115,6 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=BTN_KEY4
 PA9.Locked=true
 PA9.Signal=GPXTI9
-PB10.Signal=S_TIM2_CH3
-PB11.Signal=S_TIM2_CH4
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=SWO
 PB3\ (JTDO-TRACESWO).Locked=true
@@ -136,10 +128,6 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=HX_CLK
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PB6.Signal=S_TIM4_CH1
-PB7.Signal=S_TIM4_CH2
-PB8.Signal=S_TIM4_CH3
-PB9.Signal=S_TIM4_CH4
 PC10.GPIOParameters=GPIO_Label
 PC10.GPIO_Label=LCD_CLK
 PC10.Mode=TX_Only_Simplex_Unidirect_Master
@@ -247,37 +235,15 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-SH.S_TIM2_CH1.0=TIM2_CH1,Output Compare1 CH1
+SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,Output Compare2 CH2
-SH.S_TIM2_CH2.ConfNb=1
-SH.S_TIM2_CH3.0=TIM2_CH3,Output Compare3 CH3
-SH.S_TIM2_CH3.ConfNb=1
-SH.S_TIM2_CH4.0=TIM2_CH4,Output Compare4 CH4
-SH.S_TIM2_CH4.ConfNb=1
-SH.S_TIM4_CH1.0=TIM4_CH1,Output Compare1 CH1
-SH.S_TIM4_CH1.ConfNb=1
-SH.S_TIM4_CH2.0=TIM4_CH2,Output Compare2 CH2
-SH.S_TIM4_CH2.ConfNb=1
-SH.S_TIM4_CH3.0=TIM4_CH3,Output Compare3 CH3
-SH.S_TIM4_CH3.ConfNb=1
-SH.S_TIM4_CH4.0=TIM4_CH4,Output Compare4 CH4
-SH.S_TIM4_CH4.ConfNb=1
 SPI3.CalculateBaudRate=40.0 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
-TIM2.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
-TIM2.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM2.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
-TIM2.Channel-Output\ Compare4\ CH4=TIM_CHANNEL_4
-TIM2.IPParameters=Channel-Output Compare1 CH1,Channel-Output Compare2 CH2,Channel-Output Compare3 CH3,Channel-Output Compare4 CH4
-TIM4.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
-TIM4.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM4.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
-TIM4.Channel-Output\ Compare4\ CH4=TIM_CHANNEL_4
-TIM4.IPParameters=Channel-Output Compare1 CH1,Channel-Output Compare2 CH2,Channel-Output Compare3 CH3,Channel-Output Compare4 CH4
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-PWM Generation1 CH1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
